Horizontal overflow of hero section fixed

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
 .hero{
     text-align: center;
     height: 100dvh;
-    width: 100vw;
+    width: 100%;
 }
 .hero h1{
     padding-top: 45vh;
